--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       }
     }
   </script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
   <!-- The importmap has been removed. Vite will handle module resolution. -->
 
 </head>
